k8s_yaml/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: agent-routes
  namespace: agent
spec:
  hosts:
  - "*"
  gateways:
    - agent-gateway
  http:
    - match:
      - uri:
          prefix: /frontend
      rewrite:
        uri: /
      route:
      - destination:
          host: frontend-service
          port:
            number: 5250

    - match:
      - uri:
          prefix: /backend
      rewrite:
        uri: /
      route:
      - destination:
          host: backend-service
          port:
            number: 5201
